...
                      Container(
                          alignment: Alignment.center,
                          width: 260.0,
                          child: Column(children: [
                            new Padding(padding: EdgeInsets.only(top: 100.0)),
                            TypeAheadFormField(
                              key: Key("searchCity"),
                              textFieldConfiguration: TextFieldConfiguration(
                                controller: this._typeAheadController,
                                decoration: new InputDecoration(
                                  hintText: "Enter City",
                                  filled: true,
                                  fillColor: Colors.white,
...
                              onSaved: (value) {
                                this._selectedCity = value;
                              },
                            ),
                            SizedBox(height: 20),
                            RaisedButton(
                              key: Key("search"),
                              onPressed: () {
                                if (this._formKey.currentState.validate()) {
                                  this._formKey.currentState.save();
                                  this._selectedCity =
                                      this._typeAheadController.text;
                                  getHotels();
...
            Expanded(
              child: SizedBox(
                height: 60,
                child: Material(
                  type: MaterialType.transparency,
                  child: InkWell(
                    key: Key("directTrip"),
                    onTap: () {
                      getMyTrips();
                      Navigator.push(
                        context,
                        MaterialPageRoute(builder: (context) => NavTrip()),
                      );
...
