...
    return Scaffold(
      appBar: new AppBar(
        title: new Text('TravelME'),
        backgroundColor: Colors.green[900],
      ),
      floatingActionButton: FloatingActionButton(
        key: Key("floatingButton"),
        onPressed: () {
          Navigator.push(
            context,
            MaterialPageRoute(builder: (context) => Home()),
          );
        },
...
                shape: RoundedRectangleBorder(
                    borderRadius: BorderRadius.circular(40)),
              ),
              //This section for integration testing
              // SizedBox(height: 40),
              // RaisedButton(
              //   key: Key('signOut'),
              //   onPressed: (){
              //       Navigator.push(
              //           context,
              //           MaterialPageRoute(builder: (context) => LoginPage()),
              // );
              //   })
...
